cloudformation/networking.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'VPC and security groups with and without internet access.'
Parameters:
  DeploymentName:
    Type: String
    Description: 'Name of deployment. Used as tag for all resources.'
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: '10.0.0.0/16'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: 'DeploymentName'
          Value: !Ref DeploymentName

  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: 'DeploymentName'
          Value: !Ref DeploymentName
  GatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: '10.0.0.0/24'
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: 'DeploymentName'
          Value: !Ref DeploymentName

  PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs  '' ]
      CidrBlock: '10.0.1.0/24'
      MapPublicIpOnLaunch: false
      Tags:
        - Key: 'DeploymentName'
          Value: !Ref DeploymentName

  NATGateway1EIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
      Tags:
        - Key: 'DeploymentName'
          Value: !Ref DeploymentName
  NATGateway1:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt NATGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: 'DeploymentName'
          Value: !Ref DeploymentName

  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: 'DeploymentName'
          Value: !Ref DeploymentName
  DefaultPublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: GatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway
  PublicSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PrivateRouteTable1:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: 'DeploymentName'
          Value: !Ref DeploymentName
  DefaultPrivateRoute1:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref NATGateway1
  PrivateRoute1Association:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  SecurityGroupInternet:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'With internet access.'
      VpcId: !Ref VPC
      SecurityGroupEgress:
        -
      Tags:
        - Key: 'DeploymentName'
          Value: !Ref DeploymentName
  SecurityGroupPrivate:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Only VPC access.'
      VpcId: !Ref VPC
      Tags:
        - Key: 'DeploymentName'
          Value: !Ref DeploymentName
